[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
allow_zero_version = false
tag_format = "v{version}"
version_variables = [
  "cron_scanner/__init__.py:__version__",
  "setup.py:version"
]
build_command = "python -m build --sdist --wheel ."

[tool.semantic_release.remote]
token = "GH_TOKEN"

[tool.semantic_release.publish]
upload_to_vcs_release = true
